# repolyzer

./: .gitignore  LICENSE  README.md  demo.cast  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/repolyzer/: __init__.py  __main__.py  cli.py  display.py
src/repolyzer/analyzers/: __init__.py  dependencies.py  git.py  health.py  languages.py  structure.py  todos.py
tests/: test_cli.py  test_dependencies.py  test_git.py  test_health.py  test_languages.py  test_structure.py  test_todos.py
