[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repolyzer"
version = "0.1.0"
description = "Instant beautiful insights about any codebase. Like neofetch, but for your repos."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "repolyzer contributors" },
]
keywords = ["cli", "git", "codebase", "analyzer", "developer-tools", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
repolyzer = "repolyzer.cli:main"

[project.urls]
Homepage = "https://github.com/repolyzer/repolyzer"
Repository = "https://github.com/repolyzer/repolyzer"
Issues = "https://github.com/repolyzer/repolyzer/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
